crates/liminal-server/tests/trybuild/fenced_proof_cannot_copy.stderr
error[E0382]: use of moved value: `proof`
 --> tests/trybuild/fenced_proof_cannot_copy.rs:6:18
  |
3 | fn copy_proof(proof: FencedAttachCommit) {
  |               ----- move occurs because `proof` has type `FencedAttachCommit`, which does not implement the `Copy` trait
4 |     let retained = proof;
  |                    ----- value moved here
5 |     drop(retained);
6 |     let copied = proof;
  |                  ^^^^^ value used here after move
